semaphore/semaphore.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semaphore
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: semaphore
  template:
    metadata:
      labels:
        app.kubernetes.io/name: semaphore
    spec:
      hostNetwork: true
      volumes:
        - name: semaphore-storage
          persistentVolumeClaim:
            claimName: semaphore-pvc
      containers:
        - name: mysql
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 65534
          image: "mysql:5.6"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: "/var/lib/mysql"
              name: semaphore-storage
        - name: semaphore
          securityContext:
            {}
          image: "ansiblesemaphore/semaphore:v2.8.53"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: semaphore-service
spec:
  selector:
    app.kubernetes.io/name: semaphore
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
