semaphore/semaphore_ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: semaphore
spec:
  ingressClassName: kong
  rules:
  - host: semaphorek8.aandd.io
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: semaphore-service
            port:
              number: 80
